swagger oauth route added
